<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="@dimen/default_elevation"
        android:fitsSystemWindows="true"
        app:theme="@style/AppTheme.ToolBar"
        app:title="@string/about"
        app:titleTextColor="?attr/colorTextTitle" />

    <LinearLayout
        android:id="@+id/theme_light"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_light" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/colorAccent"
            android:elevation="2dp"
            android:foreground="@drawable/bg_circle"
            android:padding="1dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recycler_decoration" />

    <LinearLayout
        android:id="@+id/theme_dark"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/colorAccent_dark"
            android:elevation="2dp"
            android:foreground="@drawable/bg_circle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recycler_decoration" />

    <LinearLayout
        android:id="@+id/theme_dark_amoled"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark_amoled" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/amoled_dark"
            android:elevation="2dp"
            android:foreground="@drawable/bg_circle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/recycler_decoration" />
</LinearLayout>
