<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/default_elevation"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/title_add_cost_ticket"
        app:titleTextColor="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#CCC"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/currency_info"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_cost_title"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/AppTheme.TextInput"
                    app:theme="@style/AppTheme.TextInput">

                    <EditText
                        android:id="@+id/et_cost_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cost_title_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="20sp"
                        android:theme="@style/AppTheme.TextInput" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_cost_total"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/AppTheme.TextInput"
                    app:theme="@style/AppTheme.TextInput">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cost_total_hint"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="20sp"
                        android:theme="@style/AppTheme.TextInput" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_cost_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/price_spinners"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@style/AppTheme.TextInput"
                        app:theme="@style/AppTheme.TextInput">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/trading_price_hint"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:textSize="20sp"
                            android:theme="@style/AppTheme.TextInput" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/price_spinners"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner_price_type"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:entries="@array/buying_price_type_spinner" />

                        <Spinner
                            android:id="@+id/spinner_price_currency_type"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:entries="@array/buying_price_currency_spinner" />
                    </LinearLayout>
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_cost_buy_time"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/AppTheme.TextInput"
                    app:theme="@style/AppTheme.TextInput">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:hint="@string/buy_time_hint"
                        android:inputType="date"
                        android:clickable="false"
                        android:focusable="false"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textCursorDrawable="@null"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        android:theme="@style/AppTheme.TextInput" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#CCC"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/cost_note"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_cost_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stored_in_hint"
                android:inputType="text"
                android:minLines="4"
                android:padding="8dp"
                android:textSize="20sp"
                android:theme="@style/AppTheme.TextInput" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>